# just-builder

./: .gitignore  README.md  pyproject.toml
just_builder/: __init__.py  builder.py  cli.py  config.py  workspace.py
just_builder/steps/: archiver.py  compiler.py  env.py  packager.py  packager_nuitka.py  packager_pyinstaller.py
just_builder/utils/: ast_parser.py  discovery.py  project_info.py  system.py
